k8s/backend-router-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-router-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: backend-router-server
  template:
    metadata:
      labels:
        component: backend-router-server
    spec:
      containers:
        -
          name: backend-router
          image: d0rka/graph-cluster-backend-router
          ports:
            -
              containerPort: 80
