k8s/backend-router-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-router-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: backend-router-server
  ports:
    -
      port: 80
      targetPort: 80
